fix: make the hamburger icon work properly on mobile

--- a/theme/styles/index.scss
+++ b/theme/styles/index.scss
@@ -135,7 +135,6 @@ body {
 		padding: 0.5rem;
 
 		label {
-			transition: all 0.2s;
 			display: block;
 			background: url("../images/navbar-hamburger.png") no-repeat center center;
 			background-size: 37px 29px;
